# rafta.nvim

./: .gitignore  Makefile  README.md  mini.json  sandbox.lua  uninstall_grammar.sh
.github/workflows/: ci.yml
assets/: grammar.js
lua/rafta/: init.lua  model.lua  tmp.lua
lua/rafta/ctrl/: init.lua
lua/rafta/startup/: filetypes.lua  init.lua
lua/rafta/util/: init.lua  log.lua  task_provider.lua
lua/rafta/view/: extmarks.lua  init.lua  task_buffer.lua  ui.lua
plugin/: load_rafta.lua
rafta-remote/: main.go  rafta_module_addition.lua  rafta_setup.lua  setup_command.lua
rafta-remote/internal/conn/: conn.go
rafta-remote/internal/creds/: creds.go
rafta-remote/internal/pb/: pb.go
scripts/: minimal_init.lua  minimal_init.vim
tests/: log_spec.lua  setup_spec.lua  treesitter_spec.lua.bak  ui_spec.lua
treesitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  debug_test.js  debug_test.txt  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.js  tree-sitter.json  valid.txt
treesitter/bindings/c/: tree-sitter-rafta-nvim.pc.in
treesitter/bindings/go/: binding.go  binding_test.go
treesitter/bindings/node/: binding.cc  index.js
treesitter/bindings/python/tests/: test_binding.py
treesitter/bindings/python/tree_sitter_rafta_nvim/: __init__.py  binding.c
treesitter/bindings/rust/: build.rs  lib.rs
treesitter/bindings/swift/TreeSitterRaftaNvim/: rafta_nvim.h
treesitter/bindings/swift/TreeSitterRaftaNvimTests/: TreeSitterRaftaNvimTests.swift
treesitter/src/: grammar.json  node-types.json  parser.c
(+2 files in other folders)
