[package]
name = "tree-sitter-rafta-nvim"
description = "Collection of buffer syntaxes used to render tasks from rafta ( https://github.com/ChausseBenjamin/rafta ) in neovim."
version = "0.0.0"
authors = ["Benjamin Chausse <benjamin+rafta@chausse.xyz>"]
license = "MPL-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rafta-nvim"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/chaussebenjamin/rafta.nvim"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
